@@ -1,5 +1,12 @@
 2000-10-30  James Henstridge  <james@daa.com.au>
 
+	* gobjectmodule.c (pyg_closure_marshal): reorder parameters to
+	make it work with latest glib.
+	(pygobject_connect*): pass 0 for the new detail parameter.  Don't
+	know what it is for.
+	(pygobject_emit): pass 0 for detail parameter.
+	(pygobject_stop_emission): pass 0 for detail parameter.
+
 	* gtk/gtkmodule.c (init_gtk): init as module gtk._gtk.  Using just
 	_gtk doesn't seem to work with python 2.0
 
